ddetect (0.76) UNRELEASED; urgency=low

  * Joshua Kwan
    - Save a few calls to uname by pre-setting a $MODPATH variable.
  * Translations:
    - Davide Viti
      - Updated italian translation (it.po)
        corrected a typo and got rid of the fuzzy entries.

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 15 Mar 2004 12:17:35 -0800

ddetect (0.75) unstable; urgency=low

  * Translations:
    - Giuseppe Sacco
      - Just corrected two typos in the italian translation (it.po)
        and notified the translator.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:02:18 +0100

ddetect (0.74) unstable; urgency=low

  * Joey Hess
    - Don't display the modprobe error message if a floppy or ide-floppy
      module fails to load. At least one time it fails is when there is no
      floppy.. This should perhaps be done for all get_manual_hw_info
      modules, but I went for the quick hack.
  * sylvain ferriol
    - Run depmod -a in ethdetect, in case the user chooses not to run
      hw-detect.   

 -- Joey Hess <joeyh@debian.org>  Wed, 10 Mar 2004 21:17:59 -0500

ddetect (0.73) unstable; urgency=low

  * Joey Hess
    - Remove the largely duplicate ethdetect/module_params template.
      Instead, ethdetect uses hw-detect's template.

  * Translations:
    - Giuseppe Sacco
      - Updated italian translation by Davide Viti (it.po)
    - Ognyan Kulev
      - Updated Bulgarian translation (bg.po).
    - Dafydd Harries : Added Welsh translation (cy.po)
    
 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 13:45:24 -0500

ddetect (0.72) unstable; urgency=low

  * Matt Kraai
    - Make snapshot_devs in ethdetect print the device list to stdout
      instead of returning it as the exit status.
    - Add self to Uploaders.

 -- Matt Kraai <kraai@debian.org>  Thu, 04 Mar 2004 03:54:08 -0800

ddetect (0.71) unstable; urgency=low

  * Joshua Kwan
    - Make sure cardmgr is started with -f so it doesn't fork until it's