@@ -2,12 +2,14 @@ ddetect (0.76) UNRELEASED; urgency=low
 
   * Joshua Kwan
     - Save a few calls to uname by pre-setting a $MODPATH variable.
+    - Fix case where a module would initialize more than one network
+      device. (ie, two identical tulips in the same box)
   * Translations:
     - Davide Viti
       - Updated italian translation (it.po)
         corrected a typo and got rid of the fuzzy entries.
 
- -- Joshua Kwan <joshk@triplehelix.org>  Mon, 15 Mar 2004 12:17:35 -0800
+ -- Joshua Kwan <joshk@triplehelix.org>  Mon, 15 Mar 2004 17:02:57 -0800
 
 ddetect (0.75) unstable; urgency=low
 
